syntax = "proto3";

package grpc;

option go_package = "./grpc";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service BorrowingHandler {
  rpc Borrow(BorrowRequest) returns (google.protobuf.Empty) {}
  rpc Return(ReturnRequest) returns (google.protobuf.Empty) {}
}

message Borrowing {
  uint32 id = 1;
  uint32 book_id = 2;
  uint32 user_id = 3;
  google.protobuf.Timestamp borrowed_at = 4;
  google.protobuf.Timestamp returned_at = 5;
  string status = 6; // Values: "borrowed", "returned"
  uint32 amount = 7;
}

message BorrowRequest {
  uint32 book_id = 1;
  uint32 user_id = 2;
  uint32 amount = 3;
}

message ReturnRequest {
  uint32 borrowing_id = 1;
  uint32 user_id = 2;
}
